# cargo-appimage

./: .gitignore  Cargo.toml  README.md  cargo-appimage-x86_64.AppImage  cargo-appimage.AppImage  cargo-appimage.squashfs
.github/workflows/: ci.yml
src/: apprun.rs  main.rs
