[package]
name = "cargo-appimage"
version = "1.1.0"
authors = ["Isaac Mills <rooster0055@protonmail.com>", "Jim Hessin <jhessin@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Converts your crate into an AppImage"
homepage = "https://github.com/StratusFearMe21/cargo-appimage"
repository = "https://github.com/StratusFearMe21/cargo-appimage"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.9.0"
anyhow = "1.0.40"
platforms = "1.1.0"
fs_extra = "1.2.0"
exec = "0.3.1"

[package.metadata.appimage]
assets = [".idea"]

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[[bin]]
name = "cargo-appimage"
path = "src/main.rs"
test = false
doc = false

[[bin]]
name = "cargo-appimage-runner"
path = "src/apprun.rs"
test = false
doc = false
