[package]
name = "cargo-appimage"
version = "2.3.0"
authors = [
	"Isaac Mills <rooster0055@protonmail.com>",
	"Jim Hessin <jhessin@gmail.com>",
]
edition = "2024"
license = "GPL-3.0"
description = "Converts your crate into an AppImage"
homepage = "https://github.com/StratusFearMe21/cargo-appimage"
repository = "https://github.com/StratusFearMe21/cargo-appimage"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.22.1"
anyhow = "1.0.97"
fs_extra = "1.3.0"
exec = "0.3.1"
glob = "0.3.2"
cargo_metadata = "0.19.2"
memmap = "0.7.0"

[package.metadata.appimage]
assets = [".idea"]

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[[bin]]
name = "cargo-appimage"
path = "src/main.rs"
test = false
doc = false

[[bin]]
name = "cargo-appimage-runner"
path = "src/apprun.rs"
test = false
doc = false
